added games from the backburner

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {
   <nav>
 	<h2> Games </h2>
 <h3> <a href="games/aground" id="a">Aground</a> </h3>
-    <h3> <a href="games/a-small-world-cup">A Small World Cup (NEW)</a> </h3>
+    <h3> <a href="games/a-small-world-cup">A Small World Cup</a> </h3>
     <h3> <a href="games/bandit.rip/" id="b">Bandit.rip</a> </h3>
 	    <h3> <a href="https://html5.gamedistribution.com/2e44fb60fd3f4606b1b06c17a2b9d60d/" >BitLife</a> </h3>
 	 <h3> <a href="games/bloonstd1" >Bloons TD 1</a> </h3>
@@ -76,7 +76,9 @@ a {
 	<center><a href="https://pipeofferear.com/syd410pb?key=b80dfbc95e678ad6d9f5f0cd128c1df5" > <img src="https://i.ibb.co/ZdBqyP0/goofyah.jpg" alt="Adsterra" width=300 height=300> </a></center>
  <nav>
 	<h3> <a href="https://c0nstantly.github.io/minecraft/" id="m" >Minecraft</a> </h3>
-    <h3> <a href="games/ovo/" id="o">Ovo (NEW)</a> </h3>
+    <h3> <a href="games/ovo/" id="o">Ovo</a> </h3>
+<h3> <a href="games/ovo-2/" id="o">Ovo 2</a> </h3>
+     <h3> <a href="games/retro-bowl" id="r">Retro Bowl</a> </h3>
     <h3> <a href="games/run3" id="r">Run 3</a> </h3>
     <h3> <a href="games/run" >Run</a> </h3>
        <h3> <a href="games/shell-shockers/" id="s">Shell Shockers</a> </h3>
@@ -88,38 +90,7 @@ a {
     <h2> Tools </h2>
     <h3> <a href="tools/clock" >Clock (NEW)</a></h3>
   <h3> <a href="https://vercel-phi-neon.vercel.app/" >Translator</a></h3>
-    <h3> <a href="https://blue-delightful-turkey.cyclic.app/" >Proxy 1</a></h3>
-     <h3> <a href="https://proxy-theta-three.vercel.app" >Proxy 2</a> </h3>
-<h3> <a href="javascript:void(0);" onclick="openGame()">Proxy 3</a>
-	<h3> <a href="javascript:void(0);" onclick="openGame1()">Proxy 4</a>
+    <h3> <a href="https://github.com/S-PScripts/chromebook-utilities/blob/main/Prxes/Pr*xi*s%20Links.MD/"> MEGA LIST OF PROXIES </a> </h3>
     <h3> <a href="tools/beepbox/" >BeepBox</a> </h3>
     </nav>
-			    
-<script>
-function openGame() {
-var win = window.open()
-var url = "https://desmos.me"
-var iframe = win.document.createElement('iframe')
-iframe.style.width = "100%";
-iframe.style.height = "100%";
-iframe.style.border = "none";
-iframe.style.margin = "0";
-iframe.style.display = "block";
-iframe.src = url
-win.document.body.appendChild(iframe)
-}
-</script>
-<script>
-function openGame1() {
-var win = window.open()
-var url = "https://radon.games/"
-var iframe = win.document.createElement('iframe')
-iframe.style.width = "100%";
-iframe.style.height = "100%";
-iframe.style.border = "none";
-iframe.style.margin = "0";
-iframe.style.display = "block";
-iframe.src = url
-win.document.body.appendChild(iframe)
-}
-</script>
+
