--- a/games/a-small-world-cup/index.html
+++ b/games/a-small-world-cup/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-     <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1643267/index.html" width="100%" height="100%" style="border:0;" id="embededGame">
+     <iframe src="https://kdata1.com/2022/09/a-small-world-cup/" width="100%" height="100%" style="border:0;" id="embededGame">
     </iframe>
  <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
  
