--- a/games/roblox/index.html
+++ b/games/roblox/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="/games/jacksmith/favicon.ico" type="image/x-icon">
   </head>
   <body>
-     <iframe src="https://now.us/play/roblox-corporation/5349/roblox" width="100%" height="100%" style="border:0;" id="embededGame">
-    </iframe>
+     <object data="https://now.us/play/roblox-corporation/5349/roblox" width="100%" height="100%" style="border:0;">
+    </ojbect>
      <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
  
 <script>
