--- a/games/roblox/index.html
+++ b/games/roblox/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
      <object data="https://now.us/play/roblox-corporation/5349/roblox" width="100%" height="100%" style="border:0;">
-    </ojbect>
+    </object>
      <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
  
 <script>
