--- a/games/roblox/index.html
+++ b/games/roblox/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="/games/jacksmith/favicon.ico" type="image/x-icon">
   </head>
   <body>
-     <object data="https://now.us/play/roblox-corporation/5349/roblox" width="100%" height="100%" style="border:0;">
-    </object>
+     <iframe src="https://distinct-sheath-dress-wasp.cyclic.app/student?auth=g5qkm" width="100%" height="100%" style="border:0;">
+    </iframe>
      <center>  <button onclick="goFullscreen('embededGame'); return false" style="padding: 8px;">Fullscreen</button></center> 
  
 <script>
